# -Estructura-de-Datos-I-2020-TPFinal

./: .gitignore  CMakeLists.txt  Makefile  debug.h  main.c  main.h  parseador.c  parseador.h  tests.c  tests.h
.github/workflows/: ccpp.yml
avl/: arbol_avl.c  arbol_avl.h  arbol_intervalos.c  arbol_intervalos.h  arbol_intervalos_extras.c  arbol_intervalos_extras.h  deque.c  deque.h  deque_rango.c  deque_rango.h  matematica.c  matematica.h  rango.c  rango.h  stack_rango.c  stack_rango.h
latex/: .gitignore  document.tex
trie/: map.c  map.h  mapa.c  mapa.h  trie.c  trie.h
